examples/solidity/bad/nofuncs.sol
pragma solidity ^0.4.24;

contract Abstract {}
